[package]
name = "aocli"
version = "0.0.1"
authors = ["Sam Collins <samc3259@gmail.com"]
edition = "2021"
description = "Advent of Code helper CLI"
# documentation = "https://docs.rs/aocli"
readme = "README.md"
repository = "https://github.com/scjqt/aocli"
license = "MIT"
keywords = ["aoc", "advent-of-code"]

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
regex = "1.7"
ureq = "2.6"
termcolor = "1.2"
thiserror = "1.0"
bench_scraper = "0.4"
webbrowser = "0.8"