[package]
name = "aocli"
version = "0.0.4"
authors = ["Sam Collins <samc3259@gmail.com>"]
edition = "2021"
description = "Advent of Code helper CLI"
documentation = "https://docs.rs/aocli"
readme = "README.md"
repository = "https://github.com/sncxyz/aocli"
license = "MIT"
keywords = ["aoc", "advent-of-code"]

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
regex = "1.7"
ureq = "2.6"
colored = "2.0"
thiserror = "1.0"
webbrowser = "0.8"